--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,16 +1,20 @@
-<table>
-  <thead>
-  <tr>
-    <th>First name</th>
-    <th>Last name</th>
-    <th>Birth date</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let user of users">
-    <td>{{ user.FirstName }}</td>
-    <td>{{ user.LastName }}</td>
-    <td>{{ user.BirthDate }}</td>
-  </tr>
-  </tbody>
-</table>
+<div class="users-container">
+  <table>
+    <thead>
+      <tr>
+        <th>First name</th>
+        <th>Last name</th>
+        <th>Birth date</th>
+        <th>Email</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let user of users">
+        <td>{{ user.FirstName }}</td>
+        <td>{{ user.LastName }}</td>
+        <td>{{ user.BirthDate }}</td>
+        <td>{{ user.Email }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
