Implemented searching for users grid, added feedback for saving credentials, cleaned up the code a bit

--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -1,5 +1,16 @@
+.search-input {
+  margin: 40px;
+  display: flex;
+  justify-content: center;
+  input {
+    padding: 10px;
+    margin: 5px;
+    outline: none;
+  }
+}
+
 .users-container {
-  margin: 80px;
+  margin: 40px;
   display: flex;
   justify-content: center;
 
