--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -9,6 +9,7 @@
       <input type="password" id="client_secret" [(ngModel)]="client_secret">
     </div>
     <button (click)="saveCredentials()">Save Credentials</button>
+    <div class="buttonFeedback" *ngIf="credentialsSaved">Credentials saved</div>
   </div>
 </div>
 
