--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -2,10 +2,54 @@
   margin: 40px;
   display: flex;
   justify-content: center;
-  input {
-    padding: 10px;
-    margin: 5px;
-    outline: none;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+}
+
+.add-user-container {
+  display: flex;
+  justify-content: center;
+
+  form {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+
+    label {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      input {
+        width: 140px;
+      }
+    }
+
+    .button-container {
+      margin-top: 20px;
+      display: flex;
+      justify-content: space-evenly;
+
+      button {
+        width: 100px;
+      }
+    }
+
+    p {
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    .success-msg {
+      color: green;
+    }
+
+    .error-msg {
+      color: red;
+    }
   }
 }
 
@@ -29,5 +73,14 @@
         }
       }
     }
+  }
+}
+
+.info-container {
+  display: flex;
+  justify-content: center;
+
+  p {
+    margin-top: 30px;
   }
 }
