--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,23 @@ body {
   margin: 0;
   padding: 0;
 }
+
+button {
+  padding: 8px;
+  border-radius: 4px;
+  background-color: rgba(197, 197, 197, 0.50);
+
+  &:hover {
+    background-color: rgba(197, 197, 197, 0.35);
+  }
+
+  &:active {
+    background-color: rgba(197, 197, 197, 0.2);
+  }
+}
+
+input {
+  padding: 10px;
+  margin: 5px;
+  outline: none;
+}
