--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -24,7 +24,7 @@
       align-items: center;
 
       input {
-        width: 140px;
+        width: 150px;
       }
     }
 
@@ -62,14 +62,38 @@
     border-collapse: collapse;
     thead {
       tr {
-        border-bottom: 1px solid black;
+        border-bottom: 1px solid #333;
       }
     }
     tbody {
       tr {
         border-bottom: 1px solid lightgray;
+        border-left: 1px solid #efefef;
+        border-right: 1px solid #efefef;
         td {
           padding: 0 10px;
+
+          a {
+            color: #333;
+            &:hover {
+              cursor: pointer;
+            }
+          }
+        }
+      }
+
+      tr:nth-child(even) {
+        background-color: #f6f6f6;
+      }
+
+      .absence-form {
+        /*display: flex;*/
+        /*justify-content: space-evenly;*/
+        /*align-items: center;*/
+        label {
+          display: flex;
+          justify-content: space-evenly;
+          align-items: center;
         }
       }
     }
