--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -2,15 +2,20 @@
   <div class="container">
     <div>
       <label for="client_id">Client ID:</label>
-      <input type="text" id="client_id" [(ngModel)]="client_id">
+      <input type="text" id="client_id" [(ngModel)]="client_id" (input)="feedbackMsg = ''">
     </div>
     <div>
       <label for="client_secret">Client Secret:</label>
-      <input type="password" id="client_secret" [(ngModel)]="client_secret">
+      <input type="password" id="client_secret" [(ngModel)]="client_secret" (input)="feedbackMsg = ''">
     </div>
     <button (click)="saveCredentials()">Save Credentials</button>
-    @if(credentialsSaved) {
-      <div class="buttonFeedback">Credentials saved</div>
+    @if(feedbackMsg) {
+      @if(apiService.areCredentialsSet()) {
+        <div class="buttonFeedback, success-msg">{{ feedbackMsg }}</div>
+      }
+      @if(!apiService.areCredentialsSet()) {
+        <div class="buttonFeedback, error-msg">{{ feedbackMsg }}</div>
+      }
     }
   </div>
 </div>
