Small fix. Also added .gitignore

--- a/src/app/absences/absences.component.html
+++ b/src/app/absences/absences.component.html
@@ -74,7 +74,7 @@
 @if(!apiService.areCredentialsSet()) {
   <div class="info-container">
     <p>
-      Credentials must be set in order to see the list of users.
+      Credentials must be set in order to see the list of absences.
     </p>
   </div>
   <div class="button-container">
